tm-core/tests/snapshots/horizon_close__close_week_report_json.snap
---
source: tm-core/tests/horizon_close.rs
expression: json
---
{
  "period": "week",
  "key": "2026-W37",
  "moved": [
    {
      "id": "x1",
      "from": "week/2026-W37.md",
      "to": "week/2026-W38.md"
    },
    {
      "id": "x2",
      "from": "week/2026-W37.md",
      "to": "week/2026-W38.md"
    },
    {
      "id": "d1",
      "from": "week/2026-W37.md",
      "to": "backlog.md"
    }
  ],
  "demoted": [
    {
      "id": "m1",
      "est_min": 360,
      "stamps": [
        "W37"
      ]
    },
    {
      "id": "m2",
      "est_min": 360,
      "stamps": [
        "W37"
      ]
    },
    {
      "id": "m3",
      "est_min": 180,
      "stamps": [
        "W37"
      ]
    },
    {
      "id": "m4",
      "est_min": 120,
      "stamps": [
        "W37"
      ]
    }
  ],
  "reopened": [],
  "dropped_children": [
    "t1",
    "t3",
    "t4",
    "t5"
  ],
  "carried": [
    "x1",
    "x2"
  ],
  "dropped": [],
  "overdue_to_backlog": [
    "d1"
  ],
  "notes": []
}
