tm-core/tests/snapshots/horizon_close__month_after_month_close.snap
---
source: tm-core/tests/horizon_close.rs
expression: "text(&store, MONTH)"
---
---
month: 2026-09
---
# Outcomes
- [~] 2 !3 Winter course selection + admin done        ^O3

# Demoted
